// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should create new group 1`] = `
<Fragment>
  <header
    className="page-header"
    id="groups-header"
  >
    <h1
      className="page-title"
    >
      user_groups.page
    </h1>
    <DeferredSpinner
      loading={false}
      timeout={100}
    />
    <div
      className="page-actions"
    >
      <Button
        id="groups-create"
        onClick={[Function]}
      >
        groups.create_group
      </Button>
    </div>
    <p
      className="page-description"
    >
      user_groups.page.description
    </p>
  </header>
</Fragment>
`;

exports[`should create new group 2`] = `
<Fragment>
  <header
    className="page-header"
    id="groups-header"
  >
    <h1
      className="page-title"
    >
      user_groups.page
    </h1>
    <DeferredSpinner
      loading={false}
      timeout={100}
    />
    <div
      className="page-actions"
    >
      <Button
        id="groups-create"
        onClick={[Function]}
      >
        groups.create_group
      </Button>
    </div>
    <p
      className="page-description"
    >
      user_groups.page.description
    </p>
  </header>
  <Form
    confirmButtonText="create"
    header="groups.create_group"
    onClose={[Function]}
    onSubmit={[Function]}
  />
</Fragment>
`;
